--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div class="navbar">
-    <mat-drawer-container style="height: 100vh;">
-        <mat-drawer mode="side" opened="true" disableClose class="side-nav" (mouseleave)="menuShow = false">
-            <mat-nav-list class="menu-animation" [style.width]="menuShow ? '250px' : '125px'">
+    <mat-drawer-container style="height: 100vh;" [hasBackdrop]="'false'">
+        <mat-drawer mode="over" opened disableClose class="side-nav" (mouseleave)="menuShow = false">
+            <mat-nav-list class="menu-animation" [style.width]="menuShow ? '650px' : '125px'">
                 <div class="header-logo">
                     <img src="\assets\imgs\hotstarlogo.svg" class="hot-logo">
-                    <span class="subscirbe-text">Subscribe <mat-icon
+                    <span class="subscirbe-text">Subscribe<mat-icon
                             class="arrow-icon">arrow_forward_ios</mat-icon></span>
                 </div>
                 <div class="btn-container">
@@ -20,6 +20,5 @@
             <app-home></app-home>
         </mat-drawer-content>
     </mat-drawer-container>
-    <!-- <div class="main-content"><app-home></app-home></div> -->
 </div>
 <router-outlet></router-outlet>
