--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -9,7 +9,7 @@
 .movie-details {
     position: absolute;
     top: 34%;
-    left: 2%;
+    left: 10%;
     z-index: 1;
     display: flex;
     flex-direction: column;
@@ -35,7 +35,7 @@
     max-width: 750px;
     overflow: hidden;
     top: 80%;
-    left: 58%;
+    right: 80px;
     z-index: 3;
     filter: drop-shadow(10px 5px 15px black);
     cursor: pointer;
@@ -82,6 +82,7 @@
 .trending-container {
     display: flex;
     flex-direction: column;
+    padding-left: 150px;
 
     .head-trending {
         display: flex;
@@ -141,11 +142,9 @@
         }
     }
 
-    .trend-navigation:hover {
-       
-    }
+    .trend-navigation:hover {}
 
-    .border-img{
+    .border-img {
         border-radius: 8px;
     }
 }
