--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -59,14 +59,16 @@
 
 .selecting-arrow {
     position: absolute;
-    top: 35%;
-    right: 20px;
+    padding: 46px 10px;
+    right: 10px;
+    background: linear-gradient(to right, black 10%, transparent 100%);
 }
 
 .selecting-arrow-back {
     position: absolute;
-    top: 35%;
-    left: 8px;
+    padding: 46px 10px;
+    left: 0px;
+    background: linear-gradient(to left, black 10%, transparent 100%);
 }
 
 /* ::-webkit-scrollbar {
@@ -115,6 +117,7 @@
     }
 
     .trend-box {
+        position: relative;
         display: flex;
         flex-direction: row;
         gap: 10px;
@@ -123,6 +126,22 @@
 
     .trend-poster {
         cursor: pointer;
+    }
+
+    .show-details {
+        position: absolute;
+        top: 0%;
+        width: 336px;
+        height: 396px;
+        background-color: black;
+        color: white;
+        transform: scale(1.0);
+        border-radius: 8px;
+        transition: width 0.6s ease-in-out;
+    }
+
+    .show-details-img {
+        width: 100%;
     }
 
     .trend-info {
