--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,8 @@
         </div>
         <div class="movie-details">
             <div class="movie-poster">
-                <img style="border-radius: 8px;" [src]="'https://image.tmdb.org/t/p/w200' + selectedMovie?.poster_path" alt="Movie Poster">
+                <img style="border-radius: 8px;" [src]="'https://image.tmdb.org/t/p/w200' + selectedMovie?.poster_path"
+                    alt="Movie Poster">
             </div>
             <div class="movie-info">
                 <h1>{{ selectedMovie?.title }}</h1>
@@ -37,9 +38,23 @@
             <a class="view-all">View All <mat-icon class="view-icon">arrow_forward_ios</mat-icon></a>
         </div>
         <div class="trend-box">
-            <div *ngFor="let trending of topMovies.slice(navPosition, navPosition + 10)">
+            <div *ngFor="let trending of topMovies.slice(navPosition, navPosition + 10); let i = index;">
                 <div class="trend-poster">
-                    <img class="border-img" [src]="'https://image.tmdb.org/t/p/w200' + trending.poster_path" alt="Movie Poster">
+                    <img (mouseleave)="isTopRatedHover = false" (mouseenter)="onTopRatedImageHover(i, trending)"
+                        class="border-img" [src]="'https://image.tmdb.org/t/p/w200' + trending.poster_path"
+                        alt="Movie Poster">
+                </div>
+                <div *ngIf="isTopRatedHover && hoveredImageIndex === i" class="show-details">
+                    <img class="show-details-img"
+                        [src]="'https://image.tmdb.org/t/p/w500' + hoveredImageData.backdrop_path">
+                    <div class="trend-info">
+                        <h1>{{ hoveredImageData.title }}</h1>
+                        <p>{{ hoveredImageData.overview }}</p>
+                        <p>Release Date: {{ hoveredImageData.release_date }}</p>
+                        <p>Popularity: {{ hoveredImageData.popularity }}</p>
+                        <p>Popularity: {{ hoveredImageData.popularity }}</p>
+                        <p>Vote Average: {{ hoveredImageData.vote_average }}</p>
+                    </div>
                 </div>
                 <!-- <div class="trend-info">
                     <h1>{{ trending.title }}</h1>
@@ -62,9 +77,23 @@
             <a class="view-all">View All <mat-icon class="view-icon">arrow_forward_ios</mat-icon></a>
         </div>
         <div class="trend-box">
-            <div *ngFor="let tvShows of popularShows.slice(showPosition, showPosition + 10)">
+            <div *ngFor="let tvShows of popularShows.slice(showPosition, showPosition + 10); let i = index;">
                 <div class="trend-poster">
-                    <img class="border-img" [src]="'https://image.tmdb.org/t/p/w200' + tvShows.poster_path" alt="Movie Poster">
+                    <img (mouseleave)="isPopularShowHover = false" (mouseenter)="onPopularShowImageHover(i, tvShows)"
+                        class="border-img" [src]="'https://image.tmdb.org/t/p/w200' + tvShows.poster_path"
+                        alt="Movie Poster">
+                </div>
+                <div *ngIf="isPopularShowHover && hoveredImageIndex === i" class="show-details">
+                    <img class="show-details-img"
+                        [src]="'https://image.tmdb.org/t/p/w500' + hoveredImageData.backdrop_path">
+                    <div class="trend-info">
+                        <h1>{{ hoveredImageData.title }}</h1>
+                        <p>{{ hoveredImageData.overview }}</p>
+                        <p>Release Date: {{ hoveredImageData.release_date }}</p>
+                        <p>Popularity: {{ hoveredImageData.popularity }}</p>
+                        <p>Popularity: {{ hoveredImageData.popularity }}</p>
+                        <p>Vote Average: {{ hoveredImageData.vote_average }}</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -74,16 +103,29 @@
         </div>
     </div>
 
-
     <div class="trending-container">
         <div class="head-trending">
             <a class="trend-title">Upcomming Movies</a>
             <a class="view-all">View All <mat-icon class="view-icon">arrow_forward_ios</mat-icon></a>
         </div>
         <div class="trend-box">
-            <div *ngFor="let upcomMovie of upcommingMovie.slice(moviePosition, moviePosition + 10)">
+            <div *ngFor="let upcomMovie of upcommingMovie.slice(moviePosition, moviePosition + 10); let i = index;">
                 <div class="trend-poster">
-                    <img class="border-img" [src]="'https://image.tmdb.org/t/p/w200' + upcomMovie.poster_path" alt="Movie Poster">
+                    <img (mouseleave)="isUpcomingMovieHover = false"
+                        (mouseenter)="onUpcomingMovieImageHover(i, upcomMovie)" class="border-img"
+                        [src]="'https://image.tmdb.org/t/p/w200' + upcomMovie.poster_path" alt="Movie Poster">
+                </div>
+                <div *ngIf="isUpcomingMovieHover && hoveredImageIndex === i" class="show-details">
+                    <img class="show-details-img"
+                        [src]="'https://image.tmdb.org/t/p/w500' + hoveredImageData.backdrop_path">
+                    <div class="trend-info">
+                        <h1>{{ hoveredImageData.title }}</h1>
+                        <p>{{ hoveredImageData.overview }}</p>
+                        <p>Release Date: {{ hoveredImageData.release_date }}</p>
+                        <p>Popularity: {{ hoveredImageData.popularity }}</p>
+                        <p>Popularity: {{ hoveredImageData.popularity }}</p>
+                        <p>Vote Average: {{ hoveredImageData.vote_average }}</p>
+                    </div>
                 </div>
             </div>
         </div>
