--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -120,8 +120,9 @@
         position: relative;
         display: flex;
         flex-direction: row;
-        gap: 10px;
+        gap: 20px;
         overflow: hidden;
+        -webkit-overflow-scrolling: touch;
     }
 
     .trend-poster {
