--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,11 +12,7 @@
         overflow-x: hidden;
 
         .menu-animation {
-            transition: width 0.6s ease-in-out;   
-        }
-
-        .test{
-            border: none !important;
+            transition: width 0.3s ease-in-out;   
         }
 
         .header-logo {
@@ -55,7 +51,7 @@
         .btn-container {
             color: rgb(157, 158, 159);
             position: absolute;
-            top: 25%;
+            top: 28%;
             left: 35px;
 
             .icon-font {
@@ -64,24 +60,25 @@
                 justify-content: center;
                 align-items: center;
                 position: relative;
-                padding: 15px 0;
+                padding: 10px 0;
+
             }
 
             .menu-font {
-                /* font-size: 20px; */
+                font-size: 22px;
                 position: absolute;
-                top: 10px;
-                left: 60px;
                 white-space: nowrap;
                 cursor: pointer;
+                padding: 0 50px 25px 30px;
             }
         }
 
         .btn-container button:hover {
             color: white;
-            transform: translateY(-1px) translateX(0.1em);
-            font-weight: 800;
-            transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+            transform: translateY(-1px) translateX(5px);
+            font-weight: 600;
+            transform: scale(1.2);
+            transition: color 0.1s ease-in-out, transform 0.3s ease-in-out;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
         }
     }
