--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,11 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: "Inter", sans-serif ,Roboto, "Helvetica Neue", sans-serif; }
+
+::-webkit-scrollbar {
+    width: 0px; /* Adjust as needed */
+    background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+    background-color: transparent;
+}
