--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -112,7 +112,7 @@
         display: flex;
         flex-direction: row;
         gap: 20px;
-        overflow: hidden;
+        /* overflow: hidden; */
     }
 
     .trend-poster {
