--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,75 +1,75 @@
 .container {
     background: hsl(228, 14.29%, 6.86%);
-}
 
-.movie-container {
-    position: relative;
-}
+    .movie-container {
+        position: relative;
+    }
 
-.movie-details {
-    position: absolute;
-    top: 34%;
-    left: 10%;
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    filter: drop-shadow(10px 5px 15px black);
-}
+    .movie-details {
+        position: absolute;
+        top: 34%;
+        left: 10%;
+        z-index: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        filter: drop-shadow(10px 5px 15px black);
+    }
 
-.movie-poster {
-    margin-bottom: 10px;
-}
+    .movie-poster {
+        margin-bottom: 10px;
+    }
 
-.movie-info {
-    color: white;
-    font-size: 18px;
-    max-width: 500px;
-    backdrop-filter: blur(8px);
-}
+    .movie-info {
+        color: white;
+        font-size: 18px;
+        max-width: 500px;
+        backdrop-filter: blur(8px);
+    }
 
-.selecting-section {
-    display: flex;
-    flex-direction: row;
-    position: absolute;
-    max-width: 750px;
-    top: 80%;
-    right: 80px;
-    z-index: 3;
-    filter: drop-shadow(10px 5px 15px black);
-    cursor: pointer;
-}
+    .selecting-section {
+        display: flex;
+        flex-direction: row;
+        position: absolute;
+        max-width: 750px;
+        top: 80%;
+        right: 80px;
+        z-index: 3;
+        filter: drop-shadow(10px 5px 15px black);
+        cursor: pointer;
+    }
 
-.selecting-img {
-    height: 120px;
-    width: 80px;
-    margin-right: 15px;
-    transition: transform 0.3s;
-    border-radius: 10px;
-    transform-origin: bottom;
-}
+    .selecting-img {
+        height: 120px;
+        width: 80px;
+        margin-right: 15px;
+        transition: transform 0.3s;
+        border-radius: 10px;
+        transform-origin: bottom;
+    }
 
-.selecting-img:hover {
-    transform: scale(1.2);
-    border-radius: 10px;
-}
+    .selecting-img:hover {
+        transform: scale(1.2);
+        border-radius: 10px;
+    }
 
-.move-btns {
-    color: white;
-}
+    .move-btns {
+        color: white;
 
-.selecting-arrow {
-    position: absolute;
-    padding: 46px 20px 46px 40px;
-    right: 10px;
-    background: linear-gradient(to left, black 10%, transparent 100%);
-}
+        .selecting-arrow {
+            position: absolute;
+            padding: 46px 20px 46px 40px;
+            right: 10px;
+            background: linear-gradient(to left, black 10%, transparent 100%);
+        }
 
-.selecting-arrow-back {
-    position: absolute;
-    padding: 46px 40px 46px 20px;
-    left: 0px;
-    background: linear-gradient(to right, black 10%, transparent 100%);
+        .selecting-arrow-back {
+            position: absolute;
+            padding: 46px 40px 46px 20px;
+            left: 0px;
+            background: linear-gradient(to right, black 10%, transparent 100%);
+        }
+    }
 }
 
 .trending-container {
@@ -112,27 +112,11 @@
         display: flex;
         flex-direction: row;
         gap: 20px;
-        /* overflow: hidden; */
+        overflow: hidden;
     }
 
     .trend-poster {
         cursor: pointer;
-    }
-
-    .show-details {
-        position: absolute;
-        top: 0%;
-        width: 336px;
-        height: 396px;
-        background-color: black;
-        color: white;
-        transform: scale(1.0);
-        border-radius: 8px;
-        transition: width 0.6s ease-in-out;
-    }
-
-    .show-details-img {
-        width: 100%;
     }
 
     .trend-info {
@@ -153,6 +137,23 @@
     }
 
     .trend-navigation:hover {}
+
+    .show-details {
+        position: relative;
+        top: 0%;
+        width: 350px;
+        height: 400px;
+        background-color: black;
+        color: white;
+        transform: scale(1.1);
+        border-radius: 8px;
+        transition: width 0.6s ease-in-out;
+    }
+
+    .show-details-img {
+        width: 100%;
+    }
+
 
     .border-img {
         border-radius: 8px;
