--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,28 +3,29 @@
 
     .movie-container {
         position: relative;
-    }
 
-    .movie-details {
-        position: absolute;
-        top: 34%;
-        left: 10%;
-        z-index: 1;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        filter: drop-shadow(10px 5px 15px black);
-    }
+        .movie-details {
+            position: absolute;
+            /* top: 34%; */
+            bottom: 15vh;
+            left: 10%;
+            z-index: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            filter: drop-shadow(10px 5px 15px black);
 
-    .movie-poster {
-        margin-bottom: 10px;
-    }
+            .movie-poster {
+                margin-bottom: 10px;
+            }
 
-    .movie-info {
-        color: white;
-        font-size: 18px;
-        max-width: 500px;
-        backdrop-filter: blur(8px);
+            .movie-info {
+                color: white;
+                font-size: 18px;
+                max-width: 500px;
+                backdrop-filter: blur(8px);
+            }
+        }
     }
 
     .selecting-section {
@@ -32,42 +33,43 @@
         flex-direction: row;
         position: absolute;
         max-width: 750px;
-        top: 80%;
+        /* top: 80%; */
+        bottom: 20%;
         right: 80px;
         z-index: 3;
         filter: drop-shadow(10px 5px 15px black);
         cursor: pointer;
-    }
 
-    .selecting-img {
-        height: 120px;
-        width: 80px;
-        margin-right: 15px;
-        transition: transform 0.3s;
-        border-radius: 10px;
-        transform-origin: bottom;
-    }
-
-    .selecting-img:hover {
-        transform: scale(1.2);
-        border-radius: 10px;
-    }
-
-    .move-btns {
-        color: white;
-
-        .selecting-arrow {
-            position: absolute;
-            padding: 46px 20px 46px 40px;
-            right: 10px;
-            background: linear-gradient(to left, black 10%, transparent 100%);
+        .selecting-img {
+            height: 120px;
+            width: 80px;
+            margin-right: 15px;
+            transition: transform 0.3s;
+            border-radius: 10px;
+            transform-origin: bottom;
         }
 
-        .selecting-arrow-back {
-            position: absolute;
-            padding: 46px 40px 46px 20px;
-            left: 0px;
-            background: linear-gradient(to right, black 10%, transparent 100%);
+        .selecting-img:hover {
+            transform: scale(1.2);
+            border-radius: 10px;
+        }
+
+        .move-btns {
+            color: white;
+
+            .selecting-arrow {
+                position: absolute;
+                padding: 46px 20px 46px 40px;
+                right: 15px;
+                background: linear-gradient(to left, black 10%, transparent 100%);
+            }
+
+            .selecting-arrow-back {
+                position: absolute;
+                padding: 46px 40px 46px 20px;
+                left: 0px;
+                background: linear-gradient(to right, black 10%, transparent 100%);
+            }
         }
     }
 }
@@ -112,16 +114,35 @@
         display: flex;
         flex-direction: row;
         gap: 20px;
-        overflow: hidden;
+        /* overflow: hidden; */
+
+        .trend-poster {
+            cursor: pointer;
+        }
     }
 
-    .trend-poster {
-        cursor: pointer;
-    }
 
     .trend-info {
-        color: white;
+        font-size: 14px;
+        padding: 10px 25px;
+        color: rgb(105, 111, 131);
+        text-align: start;
         max-width: 350px;
+        max-height: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical;
+        cursor: pointer;
+
+        .title-data {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            color: white;
+            cursor: pointer;
+        }
     }
 
     .trend-navigation {
@@ -136,24 +157,50 @@
         }
     }
 
-    .trend-navigation:hover {}
-
     .show-details {
-        position: relative;
-        top: 0%;
+        position: absolute;
+        top: -3%;
+        /* bottom: 46%; */
         width: 350px;
-        height: 400px;
-        background-color: black;
+        height: 320px;
+        background-color: rgb(22, 24, 31);
         color: white;
         transform: scale(1.1);
+        transform-origin: center center;
         border-radius: 8px;
+        overflow: hidden;
         transition: width 0.6s ease-in-out;
+        filter: drop-shadow(10px 5px 15px black);
     }
 
     .show-details-img {
-        width: 100%;
+        height: 195px;
+        width: 350px;
     }
 
+    .tvshowData {
+        color: rgb(105, 111, 131);
+        text-align: start;
+        padding: 10px 20px;
+        max-width: 350px;
+        max-height: 85px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        font-size: 14px;
+        cursor: pointer;
+
+        .showHeader {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-evenly;
+            color: white;
+            cursor: pointer;
+        }
+    }
 
     .border-img {
         border-radius: 8px;
