--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,21 +33,20 @@
         </div>
     </div>
 
-    <div class="trending-container">
+    <div class="trending-container" (mouseleave)="isTopRatedHover = false">
         <div class="head-trending">
             <a class="trend-title">Top Rated</a>
             <a class="view-all">View All <mat-icon class="view-icon">arrow_forward_ios</mat-icon></a>
         </div>
         <div class="trend-box">
-            <div *ngFor="let trending of topMovies.slice(navPosition, navPosition + 8); let i = index;"
-                (mouseenter)="onTopRatedImageHover(i, trending)">
+            <div *ngFor="let trending of topMovies.slice(navPosition, navPosition + 8); let i = index;" (mouseenter)="onTopRatedImageHover(i, trending)">
                 <div class="trend-poster">
                     <img class="border-img" [src]="'https://image.tmdb.org/t/p/w200' + trending.poster_path"
                         alt="Movie Poster">
                 </div>
-                <div *ngIf="isTopRatedHover && hoveredImageIndex === i" class="show-details"
-                    (mouseleave)="isTopRatedHover = false">
-                    <iframe width="350" height="175" [src]="sanitizeYouTubeUrl(hoveredVideoKey)" frameborder="0" allow="autoplay"></iframe>
+                <div *ngIf="isTopRatedHover && hoveredImageIndex === i" class="show-details" (mouseleave)="isTopRatedHover = false" (mouseleave)="onTopRatedImageLeave()">
+                    <img *ngIf="!showIframe" class="show-img" [src]="'https://image.tmdb.org/t/p/w500' + hoveredImageData.backdrop_path">
+                    <iframe *ngIf="showIframe" width="350" height="175" [src]="sanitizeYouTubeUrl(hoveredVideoKey)" frameborder="0" allow="autoplay"></iframe>
                     <div class="trend-info">
                         <div class="title-data">
                             <p>{{ hoveredImageData.release_date }}</p>
@@ -66,7 +65,7 @@
         </div>
     </div>
 
-    <div class="trending-container">
+    <div class="trending-container" (mouseleave)="isPopularShowHover = false">
         <div class="head-trending">
             <a class="trend-title">Popular Shows</a>
             <a class="view-all">View All <mat-icon class="view-icon">arrow_forward_ios</mat-icon></a>
@@ -77,8 +76,7 @@
                 <div class="trend-poster">
                     <img class="border-img" [src]="'https://image.tmdb.org/t/p/w200' + tvShows.poster_path" alt="Movie Poster">
                 </div>
-                <div *ngIf="isPopularShowHover && hoveredImageIndex === i" class="show-details"
-                    (mouseleave)="isPopularShowHover = false">
+                <div *ngIf="isPopularShowHover && hoveredImageIndex === i" class="show-details" (mouseleave)="isPopularShowHover = false">
                     <img class="show-details-img"
                         [src]="'https://image.tmdb.org/t/p/w500' + hoveredImageData.backdrop_path">
                     <div class="tvshowData">
@@ -98,21 +96,19 @@
         </div>
     </div>
 
-    <div class="trending-container">
+    <div class="trending-container" (mouseleave)="isUpcomingMovieHover = false">
         <div class="head-trending">
             <a class="trend-title">Upcomming Movies</a>
             <a class="view-all">View All <mat-icon class="view-icon">arrow_forward_ios</mat-icon></a>
         </div>
         <div class="trend-box">
-            <div *ngFor="let upcomMovie of upcommingMovie.slice(moviePosition, moviePosition + 8); let i = index;"
-                (mouseenter)="onUpcomingMovieImageHover(i, upcomMovie)">
+            <div *ngFor="let upcomMovie of upcommingMovie.slice(moviePosition, moviePosition + 8); let i = index;" (mouseenter)="onUpcomingMovieImageHover(i, upcomMovie)">
                 <div class="trend-poster">
                     <img class="border-img" [src]="'https://image.tmdb.org/t/p/w200' + upcomMovie.poster_path" alt="Movie Poster">
                 </div>
-                <div *ngIf="isUpcomingMovieHover && hoveredImageIndex === i" class="show-details"
-                    (mouseleave)="isUpcomingMovieHover = false">
-                    <iframe width="350" height="175" [src]="sanitizeYouTubeUrl(hoveredVideoKey)" frameborder="0"
-                        allow="autoplay"></iframe>
+                <div *ngIf="isUpcomingMovieHover && hoveredImageIndex === i" class="show-details" (mouseleave)="isUpcomingMovieHover = false" (mouseleave)="onTopRatedImageLeave()">
+                    <img *ngIf="!showIframe" class="show-img" [src]="'https://image.tmdb.org/t/p/w500' + hoveredImageData.backdrop_path">
+                    <iframe *ngIf="showIframe" width="350" height="175" [src]="sanitizeYouTubeUrl(hoveredVideoKey)" frameborder="0" allow="autoplay"></iframe>
                     <div class="trend-info">
                         <div class="title-data">
                             <p>{{ hoveredImageData.release_date }}</p>
